# printbridge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.bat  build.rs  build.sh  config.toml  resources.rc  run.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml
build-workspace/pxl/: Cargo.toml  config.toml
build-workspace/pxl/sdk/: package.json
build-workspace/pxl/sdk/src/: PrintClient.ts
build-workspace/pxl/src/: cert.rs  gui.rs  main.rs  protocol.rs  service.rs
demo/: index.html
scripts/: install-cert.ps1  install-service.ps1  install.bat  install.ps1  installer.ps1  uninstall-service.ps1
sdk/: package-lock.json  tsconfig.json
sdk/src/: index.ts  types.ts
src/: cert.rs  config.rs  gui.rs  main.rs  printer.rs  protocol.rs  service.rs  websocket.rs
