[package]
name = "printbridge"
version = "1.0.0"
edition = "2021"
authors = ["PrintBridge"]
description = "Silent browser print client for Windows"

[[bin]]
name = "printbridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.21" }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-rustls = "0.26"
base64 = "0.22"
thiserror = "1.0"
anyhow = "1.0"
directories = "5.0"
toml = "0.8"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_Graphics_Printing",
  "Win32_System_Registry",
] }
windows-service = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
